# zgent

./: .gitignore  Cargo.toml  LICENSE  README.md  goal.md  impl_status.md
.github/workflows/: ci.yml  release.yml
docs/: coordination.md
src/: adapters.rs  approvals.rs  cli.rs  collaboration.rs  config.rs  daemon.rs  dashboard.rs  events.rs  gateways.rs  home.rs  init.rs  lib.rs  locks.rs  main.rs  marketplace.rs  normalizer.rs  opencode_http.rs  otel.rs  patches.rs  plugins.rs  redact.rs  runtime.rs  skills.rs  state.rs  tasks.rs  tui.rs  verify.rs  workers.rs  workflows.rs  worktrees.rs
tests/: cli.rs
