[package]
name = "zgent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local-first coordinator for AI coding agents"
repository = "https://github.com/guozijn/zgent"

[[bin]]
name = "zgent"
path = "src/main.rs"

[[bin]]
name = "zgentd"
path = "src/bin/zgentd.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
